[project]
name = "pygment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
